CANDLEPIN-718: Extract signer